Basemap: visibility, opacity and z-index Fixes #3

--- a/styles.css
+++ b/styles.css
@@ -111,9 +111,9 @@ button:hover, input[type="submit"]:hover, #button-container input[type="radio"]:
     width: 6rem;
 }
 
-.basemap input[type="checkbox"][id^="checkbox"] {
+.basemap-checkbox {
     display: none;
-} 
+}
 
 .basemap label {
     border: 0.5rem solid var(--background);
@@ -122,12 +122,33 @@ button:hover, input[type="submit"]:hover, #button-container input[type="radio"]:
     cursor: pointer;
 }
 
-.basemap input[type="checkbox"]:checked + label {
+.basemap-checkbox:checked + label {
     border: 0.5rem solid var(--font);
 } 
 
 .basemap label img {
     height: 5rem;
     width: 5rem;
+    border-radius: 0.3rem;
+}
+
+.basemap-range {
+    cursor: pointer;
+    position: absolute;
+    bottom: 1.8rem;
+    width: 5rem;
+}
+
+.basemap button{
+    position: absolute;
+    left: 10px;
+    padding: 1rem;
+    background-color: rgba(1, 1, 1, 0.093);
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    text-shadow: 0 0 3px #000000;
+    border-radius: 1rem;
+    box-shadow: none;
 }
 
